--- a/PART-2/countries/src/main.css
+++ b/PART-2/countries/src/main.css
@@ -1,11 +1,14 @@
 /* App.css */
+body {
+  background-color: #333;
+}
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #333;
   min-height: 100vh;
 }
 
@@ -21,27 +24,33 @@ input {
   border: 1px solid #ccc;
   width: 90%; /* Make input width responsive */
 }
-
+.country {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  width: 100%;
+  flex-wrap: wrap;
+  gap:20px;
+}
 .card {
-  background-color: #fff;
+  background-color: #ff4d6d;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   text-align: center;
   width: 100%;
   max-width: 350px; /* Set a max width for large screens */
-  margin-top: 20px;
 }
 
-h2 {
-  color: #333;
+h1,h2{
+  color: #fff;
   font-size: 1.8rem;
 }
 
 p {
   font-size: 1.1rem;
   margin: 10px 0;
-  color: #555;
+  color: #fff;
 }
 
 strong {
